# android_sdk

./: .gitignore  CHANGELOG.md  MIT-LICENSE  README.md  SECURITY.md  VERSION
Adjust/adjust/: CMakeLists.txt  adjust-proguard-rules.txt  build.gradle
Adjust/adjust/src/androidTest/java/com/adjust/sdk/: TestActivityHandler.java  TestUnitTestActivity.java
Adjust/adjust/src/main/: AndroidManifest.xml
Adjust/adjust/src/main/cpp/: native-lib.cpp
Adjust/adjust/src/main/java/com/adjust/sdk/: ActivityHandler.java  ActivityKind.java  ActivityPackage.java  ActivityState.java  Adjust.java  AdjustAnalyzer.java  AdjustAttribution.java  AdjustConfig.java  AdjustEvent.java  AdjustEventFailure.java  AdjustEventSuccess.java  AdjustFactory.java  AdjustInstance.java  AdjustReferrerReceiver.java  AdjustSessionFailure.java  AdjustSessionSuccess.java  AdjustTestOptions.java  AdjustTimer.java  Attribution.java  AttributionHandler.java  AttributionResponseData.java  BackoffStrategy.java  ClickResponseData.java  Constants.java  CustomScheduledExecutor.java  DeviceInfo.java  Event.java  EventFailureResponseData.java  EventResponseData.java  EventSuccessResponseData.java  FailureResponseData.java  GooglePlayServicesClient.java  IActivityHandler.java  IAttributionHandler.java  IEvent.java  ILogger.java  IPackageHandler.java  IRequestHandler.java  ISdkClickHandler.java  IStateable.java  (+40 more)
Adjust/adjust/src/main/java/com/adjust/sdk/plugin/: AndroidIdUtil.java  MacAddressUtil.java  (+1 more)
Adjust/adjust/src/main/res/values/: strings.xml
Adjust/adjust/src/test/java/base/: UnitTestBase.java
(+859 files in other folders)
